// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button component should render Button 1`] = `
<button
  aria-label="Test title"
  class="prokodo-Button prokodo-Button--has-variant-contained prokodo-Button--has-bg-primary"
  data-island="button"
  title="Test title"
  type="button"
>
  Test title
</button>
`;

exports[`The Button component should render disabled Button 1`] = `
<button
  aria-label="Test title"
  class="prokodo-Button prokodo-Button--has-variant-contained prokodo-Button--has-bg-primary prokodo-Button--is-disabled"
  data-island="button"
  disabled=""
  tabindex="-1"
  title="Test title"
  type="button"
>
  Test title
</button>
`;

exports[`The Button component should render loading Button 1`] = `
<button
  aria-label="Test title"
  class="prokodo-Button prokodo-Button--has-variant-contained prokodo-Button--has-bg-primary"
  data-island="button"
  title="Test title"
  type="button"
>
  Test title
</button>
`;
